---------------------------------------------------------------------------------------------------
Version: 0.69.95
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.94
Date: 2025-08-09
  Changes:
    - Tenebris is now explicitly locked behind Rubia by default. This is toggleable via mod settings (just like locking Aquilo behind it). Realistically, you will only notice if you have Tenebris + a mod that deletes Aquilo.
---------------------------------------------------------------------------------------------------
Version: 0.69.93
Date: 2025-08-08
  Changes:
    - Long stack insterter recipe is no longer locked to Rubia.
    - Rubia pressure 50 hbar => 80 hbar, gravity 2=>2.4 m/s^2. This improves robot energy usage: 4x => 3x.
---------------------------------------------------------------------------------------------------
Version: 0.69.92
Date: 2025-08-04
  Changes:
    - Buffed huge asteroids so sniper turrets cannot kill them. I basically multiplied the HP/flat res of huge asteroids AND railgun ammo by 10x.
    - Nerf: Sniper turret cooldown: 180 => 200 frames. This should minimally affect Rubia, but have a much bigger nerf for super-spamming them in space.
---------------------------------------------------------------------------------------------------
Version: 0.69.91
Date: 2025-08-01
  Changes:
    - Icons for unique compatibility recipes for Krastorio 2 Spaced out are now distinguishable.
    - Vanilla galore continued module recipes are now added to the Moshine-Rubia cross tech.
---------------------------------------------------------------------------------------------------
Version: 0.69.90
Date: 2025-07-28
  Changes: