@@ -458,6 +458,7 @@ junk-mine-part5=This pile had a chunk of "greel". It doesn't immediately look us
 junk-mine-part6-rand1=You find a broken guitar. The back is signed "□□□□□□ Dan". This guitar was well-loved.
 junk-mine-part6-rand2=You find a broken guitar. The back is signed "JJ". It has faint marks of decorative colors.
 junk-mine-part6-rand3=You find a broken guitar. The back is signed "□□□□□rat". It is extremely worn.
+junk-mine-part7=In this pile, you find a rock-hard toroid in a torn wrapper with a receipt for "Law□□□□". Black mold has rendered it unfit for consumption.
 junk-mine-grenade-trap=This wreckage has a box labeled "□□ig□□□□/□□_□rt". You open it carelessly, causing items spring out.
 junk-mine-grenade-trap-2=Everything in that box was destroyed by the explosives, including some files. Its contents were clearly intended for their eyes only.
 
@@ -471,6 +472,8 @@ forgot-roboport-failsafe-part2=(Loup&Snoop) And that roboport isn't free. I'm ea
 rubia-first-blast-off-part1=(Rubia): And so the engineer blasted off in his crappy rocket, eager to discover more materials and planets, excited to give them names even worse than on Rubia.
 rubia-first-blast-off-part2=(Rubia): There is truly no place in the cosmos safe from this menace.
 rubia-first-blast-off-part3=(Loup&Snoop): Congrats on beating Rubia. I always doubted you.
+rubia-first-blast-off-part4-mp=(Loup&Snoop): Oh, I see what happened here. Thanks to everyone for being so kind as to carry __1__ to victory. He wouldn't have made it without you.
+rubia-first-blast-off-part5-mp=(Loup&Snoop): No, really. __1__ was idle for over an hour while everyone else did most of the work.
 
 ;WIP (unused)
 rubia-shield-warning-convo-part1=(exfret): There's no way he'll figure it out. He's too stupid.
